# brand-agent-server

./: brand_awareness.txt  main.py  requirements.txt
brand_awareness_agent/: README.md  brand_awareness.txt  crewai_flow.html  poem.txt  pyproject.toml
brand_awareness_agent/src/brand_awareness_agent/: main.py
brand_awareness_agent/src/brand_awareness_agent/crews/brand_awareness_crew/: brand_awareness_crew.py
brand_awareness_agent/src/brand_awareness_agent/crews/brand_awareness_crew/config/: agents.yaml  tasks.yaml
output/: result.html  result.json  result.md
