[project]
name = "brand_awareness_agent"
version = "0.1.0"
description = "brand-awareness-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.117.1,<1.0.0",
]

[project.scripts]
kickoff = "brand_awareness_agent.main:kickoff"
run_crew = "brand_awareness_agent.main:kickoff"
plot = "brand_awareness_agent.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
